--- a/css/grid.css
+++ b/css/grid.css
@@ -8,8 +8,18 @@
     grid-template-rows: 100px;
     grid-template-columns: 1fr 10fr 3fr;
     justify-items: center;
+    border: 5px solid black;
+    margin: 10px;
 }
 #main{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    margin: 10px 10px 10px 10px;
+}
+#main> article{
+    display: grid;
+    border: 3px solid black;
+    justify-items: center;
+    align-items: center;
+    margin: 2px;
 }
