--- a/css/grid.css
+++ b/css/grid.css
@@ -11,6 +11,13 @@
     border: 5px solid black;
     margin: 10px;
 }
+#header> nav{
+    justify-self: end;
+    margin-top: 20px;
+}
+#header >h1{
+    margin-top: 20px;
+}
 #main{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
